kube_templates/aks-helloworld-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-one
  template:
    metadata:
      labels:
        app: aks-helloworld-one
    spec:
      containers:
        - name: aks-helloworld-one
          image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
          ports:
          - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: "900M"  
              cpu: "1"     
            limits:
              memory: "1Gi" 
              cpu: "1.5"  
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-one
