kube_templates/ai-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - xyz.info
    secretName: letsencrypt-tls
  ingressClassName: nginx
  rules:
  - host: xyz.info
    http:
      paths:
      - path: /server(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ai-app
            port:
              number: 80
