kube_templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-app-ingress
  # namespace: ingress-basic
  # annotations:
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #   nginx.ingress.kubernetes.io/use-regex: "true"
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  # - host: xyz.info
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ai-app-service
            port:
              number: 80
